--- a/api/templates/index3.html
+++ b/api/templates/index3.html
@@ -56,9 +56,7 @@
     </style>
 </head>
 <body>
-    <h1>Digital Parker</h1>
-
-    <h2>Spot Occupancy</h2>
+    <h1>Stop Lane Detection</h1>
     <table>
         <thead>
             <tr>
